# claw_fact_bus

./: .gitignore  CLAUDE.md  CLAW_IMPROVEMENTS.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.claude/rules/: 00-global-efficiency.mdc  10-debug-scope-control.mdc  20-implementation-minimal.mdc  30-review-tight-scope.mdc  40-tests-minimum.mdc  50-safety-guardrails.mdc  60-high-cost-model-control.mdc
docs/: OPENCLAW_PLUGIN_DESIGN.md  REVIEW.md  fact-bus-plugin-design.md
docs/integration-tests/: README.md  TEST_PLAN.md  test_api_endpoints.py  test_collaboration.py  test_fact_state_machine.py  test_filter_matching.py  test_flow_control.py  test_persistence.py  test_team_collaboration.py
examples/: hr_craw_team_api_demo.py  hr_craw_team_demo.py
openclaw-skill/: README.md  SKILL.md  __init__.py  fact_bus_client.py  handlers.py  skill.yaml
openclaw-skill/examples/: basic_example.py  code_review_agent.py  monitor_agent.py  team_collaboration.py
protocol/: EXTENSIONS.md  EXTENSIONS.zh-CN.md  IMPLEMENTATION-NOTES.md  IMPLEMENTATION-NOTES.zh-CN.md  SPEC.md  SPEC.zh-CN.md
scripts/: setup-demo.sh
sdk/python/: README.md  pyproject.toml
sdk/python/claw_fact_bus_sdk/: __init__.py  client.py  models.py
skills/claw-fact-bus-agent/: SKILL.md
src/claw_fact_bus/: __init__.py  filter.py  flow_control.py  reliability.py  schema.py  types.py
tests/: __init__.py  conftest.py
tests/integration/: test_bus_engine.py
tests/unit/: test_admin_controls.py  test_filter.py  test_flow_control.py  test_reliability.py  test_types.py
(+8 files in other folders)
